--- a/rakieta/package.json
+++ b/rakieta/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "primevue": "^3.49.1",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
@@ -36,6 +37,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
+    "sass": "^1.71.1",
     "start-server-and-test": "^2.0.3",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
