--- a/rakieta/package.json
+++ b/rakieta/package.json
@@ -21,7 +21,8 @@
     "primeicons": "^6.0.1",
     "primevue": "^3.49.1",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-simple-calendar": "^7.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
