--- a/.github/workflows/gokart-web.yaml
+++ b/.github/workflows/gokart-web.yaml
@@ -34,8 +34,8 @@ jobs:
       - name: Lint and test
         working-directory: rakieta
         run: |
-          npm run lint # Update or remove this line based on your project's linting setup
-          npm run test # Update this line to match your project's test script
+          npm run lint
+          npm run test:e2e
 
   docker-build:
     if: ${{ github.ref == 'refs/heads/main' }}
