--- a/.github/workflows/verify-if-can-be-merged.yaml
+++ b/.github/workflows/verify-if-can-be-merged.yaml
@@ -25,10 +25,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Run tests
-        run: npm test
+        run: npm test:unit
 
       - name: Check for merge conflicts
         run: |
