--- a/.github/workflows/verify-if-can-be-merged.yaml
+++ b/.github/workflows/verify-if-can-be-merged.yaml
@@ -25,9 +25,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
+        working-directory: rakieta
         run: npm install
 
       - name: Run tests
+        working-directory: rakieta
         run: npm test:unit
 
       - name: Check for merge conflicts
