--- a/.github/workflows/verify-if-can-be-merged.yaml
+++ b/.github/workflows/verify-if-can-be-merged.yaml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Run tests
         working-directory: rakieta
-        run: npm test:unit
+        run: npm run test:unit
 
       - name: Check for merge conflicts
         run: |
