--- a/.github/workflows/gokart-web.yaml
+++ b/.github/workflows/gokart-web.yaml
@@ -42,10 +42,10 @@ jobs:
 #        run: |
 #          npm run test:e2e
       - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v4.3.1
+        uses: actions/upload-artifact@v3
         with:
           name: gokart-web
-          path: .
+          path: ./rakieta
 
   docker-build:
     if: ${{ github.ref == 'refs/heads/main' }}
